add short url expand

--- a/res/xml/pref_send.xml
+++ b/res/xml/pref_send.xml
@@ -55,17 +55,27 @@
 			android:targetClass="org.tamanegi.quicksharemail.ui.ConfigSendToActivity" />
   </PreferenceScreen>
 
-  <PreferenceCategory android:title="@string/title_pref_misc">
+  <PreferenceScreen android:title="@string/title_pref_misc">
 	<CheckBoxPreference
 	   android:key="show_progress"
 	   android:title="@string/title_pref_show_progress"
 	   android:summary="@string/summary_pref_show_progress"
 	   android:defaultValue="true" />
+	<CheckBoxPreference
+	   android:key="expand_url"
+	   android:title="@string/title_pref_expand_url"
+	   android:summary="@string/summary_pref_expand_url"
+	   android:defaultValue="false" />
+	<CheckBoxPreference
+	   android:key="expand_title"
+	   android:title="@string/title_pref_expand_title"
+	   android:summary="@string/summary_pref_expand_title"
+	   android:defaultValue="false" />
+  </PreferenceScreen>
 
-	<PreferenceScreen android:title="@string/title_retry_send">
-	  <intent android:targetPackage="org.tamanegi.quicksharemail"
-			  android:targetClass="org.tamanegi.quicksharemail.ui.RetrySendActivity" />
-	</PreferenceScreen>
-  </PreferenceCategory>
+  <PreferenceScreen android:title="@string/title_retry_send">
+	<intent android:targetPackage="org.tamanegi.quicksharemail"
+			android:targetClass="org.tamanegi.quicksharemail.ui.RetrySendActivity" />
+  </PreferenceScreen>
 
 </PreferenceScreen>
